[gd_scene load_steps=2 format=3 uid="uid://c07ki0dclaqs4"]

[ext_resource type="Script" uid="uid://bf6rn5khgh4wd" path="res://Scripts/exit_dungeon_popup.gd" id="1_vchbd"]

[node name="ExitDungeonPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vchbd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.037289, 0, 0.782828, 0.435294)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(50, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Congratulations, you found the exit.  You can leave the dungeon now with  your spoils or continue exploring and find more loot or risk loosing your loot"
autowrap_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="coin_total" type="Label" parent="ColorRect/VBoxContainer/PanelContainer2/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Coins:"

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="message_label" type="Label" parent="ColorRect/VBoxContainer/PanelContainer2/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Message:"

[node name="PanelContainer3" type="PanelContainer" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/VBoxContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="button_stay" type="Button" parent="ColorRect/VBoxContainer/PanelContainer3/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Stay"

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/VBoxContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="button_leave" type="Button" parent="ColorRect/VBoxContainer/PanelContainer3/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Exit"

[connection signal="pressed" from="ColorRect/VBoxContainer/PanelContainer3/HBoxContainer/MarginContainer/button_stay" to="." method="_on_button_stay_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/PanelContainer3/HBoxContainer/MarginContainer2/button_leave" to="." method="_on_button_leave_pressed"]
